manifests/data/litellm/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: litellm-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-gateway
    namespace: network
    sectionName: tcp-postgres
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: litellm-db-rw
      port: 5432
      weight: 1
